--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^44.3.0",
     "@ckeditor/ckeditor5-react": "^9.5.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-table": "^8.21.3",
     "@types/dompurify": "^3.2.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
+    "lucide-react": "^0.561.0",
     "mssql": "^11.0.1",
     "next": "^15.3.8",
     "react": "^19.0.0",
