--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/dompurify": "^3.2.0",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -37,6 +39,7 @@
     "mssql": "^11.0.1",
     "next": "^15.3.8",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.1",
     "react-content-loader": "^7.0.2",
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^4.0.14",
