--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-dom": "^19.0.0",
     "react-resizable-panels": "^4.0.14",
     "tailwind-merge": "^3.3.0",
-    "tedious": "^18.6.1"
+    "tedious": "^18.6.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
